# scikit-event-correlation

./: HISTORY.md  LICENSE  README.md  setup.cfg
example/: README.md  example.py  requirements.txt
src/: __init__.py
src/scikit-event-correlation/: cumsum.py  shewahart.py
src/scikit_event_correlation/: classifiers.py  utils.py
