[metadata]
name = scikit-event-correlation
version = 1.0.2
author = Marilena Athanasiou
author_email = info@intellia.gr
description = Event Correlation and Changing Detection Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Intellia-SME/scikit-event-correlation
project_urls =
    Changelog = https://github.com/Intellia-SME/scikit-event-correlation/blob/main/HISTORY.md
    Twitter = https://twitter.com/intellia_gr
    Bug Tracker = https://github.com/Intellia-SME/scikit-event-correlation/issues
license = BSD-3-Clause License
keywords = Scikit-learn
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
install_requires =
    scikit-learn>=1.0.2
    pandas>=1.4.0
python_requires = >=3.6

[options.packages.find]
where = src